删除没用的文件夹，修改页首文件使之更加的符合中文习惯

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,16 @@
-<section id="lifestream">
+<!--<section id="lifestream">
 	<section id="twitter">
 	</section>
 	<section id="lastfm">
 	</section>
 	<section id="flickr">
 	</section>
-</section>
+	</section>-->
 <footer>
-	<p>This site was created by <a href="http://shapeshed.com/">George Ornbo</a> using <a href="http://wiki.github.com/mojombo/jekyll">Jekyll</a> and is hosted at <a href="http://pages.github.com/">Github Pages</a>. The source is available <a href="http://github.com/shapeshed/shapeshed.github.com/">here</a></p>
+	<p>This site was created by <a href="http://lenage.com/">lenage</a> using
+	<a href="http://wiki.github.com/mojombo/jekyll">Jekyll</a> and is hosted
+	at <a href="http://pages.github.com/">Github Pages</a>. The source is
+	available <a href="http://github.com/lenage/lenage.github.com/">here</a></p>
 </footer>
 </div>
 <!--[if IE ]>
