--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	<meta charset="utf-8" />
 	<title>{% if page.title %}{{ page.title }}{% endif %}</title>
 	<!-- Meta -->
 	{% if page.meta_keywords %}<meta name="keywords" content="{{ page.meta_keywords }}" />{% endif %}
