--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,9 @@
 </footer>
 </div>
 <!--[if IE ]>
-<p class="ie-message">Hello Human! You are using Internet Explorer. If you'd like to view this site in its full glory please use a browser like <a href="http://www.mozilla.com/firefox">Firefox</a> or <a href="http://www.apple.com/safari/">Safari</a>.</p>
+<p class="ie-message">啊!嗯！噢，你还在使用IE么？其实用 <a
+	href="http://www.mozilla.com/firefox">Firefox</a> or <a
+	href="http://www.apple.com/safari/">Safari</a>访问网站得到的效果更好。</p>
 <![endif]-->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 <script src="/js/jquery.timeago.js"></script>
