--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,7 +48,22 @@ layout: default
 		</section>
 		<section id="comments">
 			<h3>Comments</h3>
-			<div id="disqus_thread"></div><script type="text/javascript" src="http://disqus.com/forums/ssgithub/embed.js"></script><noscript><a href="http://ssgithub.disqus.com/?url=ref">View the discussion thread.</a></noscript><a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>		
+			<div id="disqus_thread"></div>
+			<script type="text/javascript">
+				/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO
+				   YOUR WEBPAGE * * */
+			var disqus_shortname = 'example'; // required: replace example with your forum shortname
+
+			// The following are highly recommended additional parameters. Remove the slashes in front to use.
+			// var disqus_identifier = 'unique_dynamic_id_1234';
+			// var disqus_url = 'http://example.com/permalink-to-page.html';
+
+			/* * * DON'T EDIT BELOW THIS LINE * * */
+			(function() {
+			 var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true; dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js'; 
+			 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq); })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript> <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
 		</section>
 		{% if page.pledgie %}		
 		<section id="donations">
