fork from tatey.com

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,34 +1,6 @@
-<!--<section id="lifestream">
-	<section id="twitter">
-	</section>
-	<section id="lastfm">
-	</section>
-	<section id="flickr">
-	</section>
-	</section>-->
+<hr>
 <footer>
-	<p>This site was created by <a href="http://lenage.com/">lenage</a> using
-	<a href="http://wiki.github.com/mojombo/jekyll">Jekyll</a> and is hosted
-	at <a href="http://pages.github.com/">Github Pages</a>. The source is
-	available <a href="http://github.com/lenage/lenage.github.com/">here</a></p>
+  <p>
+    <a href="{{ base.url }}/about/">何源</a> is a 24 year old software developer living in <a href="http://www.flickr.com/photos/23054854@N06/3319265306/in/set-72157614423917229/">Brisbane, Australia</a>. You can follow me on <a href="http://twitter.com/tatejohnson/">Twitter</a>, browse my photos on <a href="http://flickr.com/tatejohnson/">Flickr</a>, hear what I listen to on <a href="http://last.fm/user/Tatey/">Last.fm</a>, fork my code on <a href="http://github.com/tatey">GitHub</a> or subscribe to my blog's <a href="http://feeds2.feedburner.com/tatejohnson">Atom feed</a>.
+  </p>
 </footer>
-</div>
-<!--[if IE ]>
-<p class="ie-message">啊!嗯！噢，你还在使用IE么？其实用 <a
-	href="http://www.mozilla.com/firefox">Firefox</a> or <a
-	href="http://www.apple.com/safari/">Safari</a>访问网站得到的效果更好。</p>
-<![endif]-->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-<script src="/js/jquery.timeago.js"></script>
-<script src="/js/onDomLoad.js"></script>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-324369-23");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-</body>
-</html>
