--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,22 @@
-{% include header.html %}
-
-  {{ content }}
-  
-
-{% include footer.html %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>{{ page.title }}</title>
+    <link href="/stylesheets/default.css?9" rel="stylesheet" type="text/css">
+    <link href="/stylesheets/highlight.css?9" rel="stylesheet" type="text/css">
+    <!--> <link href="http://feeds2.feedburner.com/tatejohnson" rel="alternate" title="Tate Johnson" type="application/atom+xml">-->>
+    <link href='/images/favicon.ico' rel='shortcut icon' type='image/ico'>
+  </head>
+  <body>
+    <h1><a href="{{ base.url }}/">lenage<span>.</span>com</a></h1>
+    <nav>
+      <ul>
+        <li><a href="{{ base.url }}/">Blog</a></li>
+        <li><a href="{{ base.url }}/projects">Projects</a></li>
+        <li><a href="{{ base.url }}/about/">About</a></li>
+      </ul>
+    </nav>
+    {{ content }}
+  </body>
+</html>
