fix sass plugin

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link href="/stylesheets/default.css?9" rel="stylesheet" type="text/css">
-    <link href="/stylesheets/highlight.css?9" rel="stylesheet" type="text/css">
-    <!--> <link href="http://feeds2.feedburner.com/tatejohnson" rel="alternate" title="Tate Johnson" type="application/atom+xml">-->>
+    <link href="/stylesheets/default.css" rel="stylesheet" type="text/css">
+    <link href="/stylesheets/highlight.css" rel="stylesheet" type="text/css">
+    <!--<link href="http://feeds2.feedburner.com/tatejohnson" rel="alternate" title="Tate Johnson" type="application/atom+xml">-->
     <link href='/images/favicon.ico' rel='shortcut icon' type='image/ico'>
   </head>
   <body>
