--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
   {% endif %}
   <form action="http://www.google.com/cse" method="get">
     <fieldset>
-      <input type="hidden" name="cx" value="011449214013281158279:ie-gceh3d90" />
+      <input type="hidden" name="cx" value="014712474749397443257:u5axdnovsmk" />
       <input type="hidden" name="ie" value="UTF-8" />
       <input type="search" name="q" size="31" />
       <input type="submit" name="sa" value="Search" />
@@ -25,4 +25,21 @@ layout: default
     <a id="right" href="{{ page.next.url }}" title="{{ page.next.title }}">Newer &rarr;</a>
   {% endif %}
 </div>
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+var disqus_shortname = 'example'; // required: replace example with your forum shortname
+
+// The following are highly recommended additional parameters. Remove the slashes in front to use.
+// var disqus_identifier = 'unique_dynamic_id_1234';
+// var disqus_url = 'http://example.com/permalink-to-page.html';
+
+/* * * DON'T EDIT BELOW THIS LINE * * */
+(function() {
+ var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+ dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+ (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+ })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 {% include footer.html %}
