--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <title>{{ page.title }}</title>
     <link href="/stylesheets/default.css" rel="stylesheet" type="text/css">
     <link href="/stylesheets/highlight.css" rel="stylesheet" type="text/css">
-    <!--<link href="http://feeds2.feedburner.com/tatejohnson" rel="alternate" title="Tate Johnson" type="application/atom+xml">-->
+    <link href="http://feeds2.feedburner.com/lenage" rel="alternate" title="lenage's blog" type="application/atom+xml">
     <link href='/images/favicon.ico' rel='shortcut icon' type='image/ico'>
   </head>
   <body>
