--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,9 @@
 <hr>
 <footer>
   <p>
-    <a href="{{ base.url }}/about/">何源</a> is a 24 year old software developer living in <a href="http://www.flickr.com/photos/23054854@N06/3319265306/in/set-72157614423917229/">Brisbane, Australia</a>. You can follow me on <a href="http://twitter.com/tatejohnson/">Twitter</a>, browse my photos on <a href="http://flickr.com/tatejohnson/">Flickr</a>, hear what I listen to on <a href="http://last.fm/user/Tatey/">Last.fm</a>, fork my code on <a href="http://github.com/tatey">GitHub</a> or subscribe to my blog's <a href="http://feeds2.feedburner.com/tatejohnson">Atom feed</a>.
+      <a href="{{ base.url }}/about/">何源</a>是一个十足的linux爱好者，目前使用archlinux+openbox<a href="http://www.douban.com/photos/album/46596354/">截图</a>.
+      <a href="http://twitter.com/heyuan/">Twitter</a>, 
+      <a href="http://douban.com/people/lendage">豆瓣</a>
+      <a href="http://last.fm/user/lendage/">Last.fm</a>, fork my code on <a href="http://github.com/lenage">GitHub</a> or subscribe to my blog's <a href="http://feeds2.feedburner.com/lenage">Atom feed</a>.
   </p>
 </footer>
