--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <hr>
 <footer>
   <p>
-      <a href="{{ base.url }}/about/">何源</a>是一个十足的linux爱好者，目前使用archlinux+openbox<a href="http://www.douban.com/photos/album/46596354/">截图</a>.
+      <a href="{{ base.url }}/about/">何源</a>是一个linux用户，目前使用archlinux+openbox,<a href="http://www.douban.com/photos/album/46596354/">截图</a>.
       <a href="http://twitter.com/heyuan/">Twitter</a>, 
       <a href="http://douban.com/people/lendage">豆瓣</a>
-      <a href="http://last.fm/user/lendage/">Last.fm</a>, fork my code on <a href="http://github.com/lenage">GitHub</a> or subscribe to my blog's <a href="http://feeds2.feedburner.com/lenage">Atom feed</a>.
+      <a href="http://last.fm/user/lendage/">Last.fm</a>,  <a href="http://github.com/lenage">GitHub</a><a href="http://feeds2.feedburner.com/lenage">Atom feed</a>.
   </p>
 </footer>
