--- a/stylesheets/default.sass
+++ b/stylesheets/default.sass
@@ -1,5 +1,3 @@
----
----
 // Variables
 
 $fill1: #111
@@ -29,7 +27,7 @@ $text2: darken($text1, 30%)
     visibility: hidden
     
 = serif
-  font-family: 'Georgia', 'Times New Roman', serif
+  font-family: '微软雅黑' 'Georgia', 'Times New Roman', serif
 
 = sans-serif
   font-family: 'Helvetica Neue', 'Helvetica', sans-serif
