--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
   <h2>{{ page.title }}</h2>
   {{ content }}
 </article>
-<p>我的<a href="http://douban.com/people/lendage">豆瓣</a></p>
+<p>在<a href="http://douban.com/people/lendage">豆瓣</a>关注我</p>
 <hr>
 <div id="paginator">
   {% if page.previous %}
@@ -25,21 +25,5 @@ layout: default
     <a id="right" href="{{ page.next.url }}" title="{{ page.next.title }}">Newer &rarr;</a>
   {% endif %}
 </div>
-<div id="disqus_thread"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'example'; // required: replace example with your forum shortname
-
-// The following are highly recommended additional parameters. Remove the slashes in front to use.
-// var disqus_identifier = 'unique_dynamic_id_1234';
-// var disqus_url = 'http://example.com/permalink-to-page.html';
-
-/* * * DON'T EDIT BELOW THIS LINE * * */
-(function() {
- var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
- dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
- (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
- })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<script type="text/javascript" src="http://benage.disqus.com/combination_widget.js?num_items=5&hide_mods=0&color=blue&default_tab=people&excerpt_length=200"></script><a href="http://disqus.com/">Powered by Disqus</a>
 {% include footer.html %}
