add disqus code

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
       <a href="{{ base.url }}/about/">何源</a>是一个linux用户，使用archlinux+openbox并乐在其中,<a href="http://www.douban.com/photos/album/46596354/">截图</a>.
       <a href="http://twitter.com/heyuan/">Twitter</a>, 
       <a href="http://douban.com/people/lendage">豆瓣</a>
-      <a href="http://last.fm/user/lendage/">Last.fm</a>,  <a href="http://github.com/lenage">GitHub</a>&nbsp;订阅<a href="http://feeds2.feedburner.com/lenage">Atom feed</a>.
+      <a href="http://last.fm/user/lendage/">Last.fm</a>,  <a href="http://github.com/lenage">GitHub</a>&nbsp;<br />
+      订阅<a href="http://feeds2.feedburner.com/lenage">Atom feed</a>.
   </p>
 </footer>
