--- a/stylesheets/default.sass
+++ b/stylesheets/default.sass
@@ -27,7 +27,7 @@ $text2: darken($text1, 30%)
     visibility: hidden
     
 = serif
-  font-family: 'Helvetica Neue', 'Helvetica', sans-serif
+  font-family: '微软雅黑','Georgia',serif
 
 = sans-serif
   font-family: 'Helvetica Neue', 'Helvetica', sans-serif
