去掉二级列表

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,12 +12,7 @@
       <h1><a href="{{ base.url }}/">lenage<span>.</span>blog</a></h1>
     <nav>
       <ul>
-          <li class="blog"><a href="{{ base.url }}/">Blog</a>
-            <div>
-                <a href="{{ base.url }}/life">.life</a>
-                <a href="{{ base.url }}/tech/">.tech</a>
-            </div>
-          </li>
+        <li><a href="{{ base.url }}/">Blog</a></li>
         <li><a href="{{ base.url }}/config">Config</a></li>
         <li><a href="{{ base.url }}/about/">About</a></li>
       </ul>
