--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <hr>
 <footer>
   <p>
-      <a href="{{ base.url }}/about/">何源</a>&nbsp;是一个linux用户，使用archlinux+openbox并乐在其中,<a href="http://www.douban.com/photos/album/46596354/">截图</a>.
+      Linux用户，使用archlinux+openbox并乐在其中,现在正在努力的学习ruby<a href="http://www.douban.com/photos/album/46596354/">截图</a>.
       <a href="http://twitter.com/heyuan/">Twitter</a>, 
       <a href="http://douban.com/people/lendage">豆瓣</a>
       <a href="http://last.fm/user/lendage/">Last.fm</a>,<a href="http://github.com/lenage">GitHub</a>&nbsp;<br />
