--- a/stylesheets/default.sass
+++ b/stylesheets/default.sass
@@ -1,10 +1,11 @@
 // Variables
 
-$fill1: #111
-$fill2: #222
-$link1: #EBFFB4
+$codebg: #111
+$bodybg: #162E41 
+$textbg: #efefef
+$link1: #000
 $link2: #C6E567
-$text1: #FFF
+$text1: #999
 $text2: darken($text1, 30%)
 
 // Mixins
@@ -25,303 +26,233 @@ $text2: darken($text1, 30%)
     height: 0
     clear: both
     visibility: hidden
-    
-= serif
-  font-family: '微软雅黑','Georgia',serif
 
-= sans-serif
-  font-family: 'Helvetica Neue', 'Helvetica', sans-serif
-  
+= format
+  line-height: 2 
+
+= sans
+  font-family: "Microsoft Yahei","Helvetica Neue",Helvetica,Arial,sans-serif 
+
 = monospace
-  font-family: monospace
-  
+  font-family: "Monaco","Courier New",monospace
+
 = ease-in-out
   -webkit-transition: all 350ms ease-in-out
   -moz-transition: all 350ms ease-in-out
   -o-transition: all 350ms ease-in-out
   transition: all 350ms ease-in-out
-  
-= format
-  line-height: 1.8em
-  
+
 = link
   a
-    border-bottom: 1px solid $link1
-    color: $link1
-    text-decoration: none
-  
-    &:hover, &:focus
-      +ease-in-out
-      border-bottom-color: $fill1
-      color: $fill1
-      background: $link1
-
-// Layout
-  
-html
-  +reset
-  background: $fill2
-  color: $text1
-  +serif
-
-body
-  +reset
-  position: relative
-  width: 44em
-  max-width: 90%
-  margin: 2em auto
-  font-size: 1.1em
-  
-h1
-  +reset
-  min-height: 202px
-  background: 
-    image: url(/images/lime.png) 
-    position: right top
-    repeat: no-repeat
-  font:
-    size: 5.5em
-    weight: normal  
-
-  &:hover
-    background-position: right bottom
-
-  a
+    //border-bottom: 1px solid $link1
     color: $text1
     text-decoration: none
 
+    &:hover,&:focus
+      +ease-in-out
+      border-bottom: 1px solid $codebg
+      background: $codebg
+      color: $textbg 
+  
+//Layout
+
+html
+  +reset
+  background: 
+    color: $bodybg
+    image: url(/images/bg.png)
+    position: 0 0
+    repeat: repeat
+  color: $codebg
+  +sans
+::selection
+  background: #476871 
+  color: #fff
+  text-shadow: none
+body
+  +reset
+#wrap
+  width: 619px 
+  margin: 5px auto
+  padding: 20px
+  border-radius: 8px
+  -webkit-border-raidus: 8px
+  -moz-border-raidus: 8px
+
+  .glow
+    width: 100% 
+    height: 754px
+    position: absolute
+    top: 0
+    left: -100px
+    z-index: -1
+    background:
+      image: url(/images/about-glow.png)
+      repeat: no-repeat
+      position: center center
+  
+#header,#footer
+  width: 619px
+  padding: 50px 0 140px
+  margin: 0 auto
+  .content
+    padding: 30px 59px 40px
+    text-align: center
+    background:
+      image: url(/images/about-content-bg.png)
+      repeat: repeat-y
+      position: left top
+    div
+      font-size: 12px
+      a
+        +link
+
+  .top
+    height: 14px
+    overflow: hidden
+    background:
+      image: url(/images/about-top-bg.png)
+      repeat: no-repeat 
+      position: left top
+  .bottom
+    height: 21px
+    background:
+      image: url(/images/about-bottom-bg.png)
+      repeat: no-repeat
+      position: top left
+h1 
+  font-size: 2em
+  text-transform: uppercase
+  text-shadow: $codebg 1px 1px 0px,lighten($bodybg,10%) 2px 2px 0px,lighten($bodybg,10%) 3px 3px 0px,lighten($bodybg,10%) 4px 4px 0px,lighten($bodybg,10%) 5px 5px 0px,lighten($bodybg,10%) 6px 6px 0px,lighten($bodybg,10%) 7px 7px 0px
+  +sans
+  a
+    color: #E3D7BF 
+    text-decoration: none
+
     &:hover
-      color: $link1
+      color: $bodybg
 
       span:after
         color: $link1
 
     span
       font-size: 0.01em
-      color: $fill2
-
-      &:after
-        content: 'dot'
-        position: relative
-        bottom: 0.5em
-        padding-left: 0.25em
-        padding-right: 0.5em
-        font-size: 25em
-        color: $text1
-        
-nav > ul
-  +reset-list
-  position: absolute
-  top: 8.75em
-  left: 0
-  +clearfix
-
-  li
-    display: block
-    float: left
-
-    a
-      +reset
-      +ease-in-out
-      padding: 0.75em
-      background: $fill1
-      font-size: 1.5em
-      letter-spacing: 0.1em
-      text:
-        transform: uppercase
-        decoration: none
       color: $text1
 
-      &:hover, &:active
-        background: $link1
-        color: $fill2
-
-    &:first-child:before, &:last-child:after
-      content: ''
-      padding:
-        top: 0.75em
-        bottom: 0.75em
-      background: $fill1
-      font-size: 1.5em
-      
-    &:first-child:before
-      padding-left: 1em
-    
-    &:last-child:after
-      padding-right: 1em
-      
-footer > p
-  +sans-serif
-  color: $text2
-  
-  a
-    color: $text1
-    border-color: $text1
-    
-    &:hover
-      background: $text1
-    
-article
-
-  time
-    display: block
-    margin:
-      top: 2.5em
-      bottom: 0.25em
-    font-weight: bold
-    text-transform: uppercase
-    color: $text2
-    +sans-serif
-
-  h2 
-    margin-top: 0
-
-// Common
-
-h2, h3
-  color: $link2
-  +sans-serif
-  +link
-  
-  a
-    color: $link2
-    border-bottom-color: $fill2
-
-h2
-  font-size: 2em
-  
-h3 
-  font-size: 1.5em
-  
-  span
-    display: block
-    font:
-      weight: normal
-      size: 0.7em
-    color: $text2
-    
-h4
-  +sans-serif
-  
-  & + p
-    padding: 1em
-    background: $fill1
-
-img
-  display: block
-  margin: 0 auto
-
-p
-  +format
-  +link
-  margin-bottom: 1.25em
-  
-ol, ul 
-  +format
-  +link
-  
-  li
-    margin-bottom: 0.625em
-    
-    &:last-child
-      margin-bottom: 0
-
-hr
-  margin: 1.5em 0
-  border:
-    top:
-      color: $fill1
-      style: solid
-      width: 1px
-    bottom:
-      color: lighten($fill1, 20%)
-      style: solid
-      width: 1px
-    left: none
-    right: none
-    
-table 
-  width: 100%
-  border-collapse: collapse
-
-  thead tr th
-    text-align: left
-    border-bottom: 1px solid $text1
-    +sans-serif
-
-  th, td
-    padding: 0.25em 0.5em
-    
-blockquote
-  padding-left: 1em
-  border-left: 1px solid $text2
-  color: $text2
-  font-style: italic
-  +sans-serif
-  
-code
-  +monospace
-
-pre
-  padding: 1em
-  overflow: auto
-  background: #111
-    
-// Uncommon
-
-img#left
-  float: left
-  margin:
-    right: 1.5em
-    bottom: 1em
-    
-ul#images
+      &:after
+        content: '★'
+        position: relative
+        bottom: 0.1em
+        padding-left: 0.2em
+        padding-right: 0.3em
+        font-size: 80em
+        color: $bodybg
+#nav
   +reset-list
   +clearfix
-  padding-top: 0.5em
-  
-  li
+  padding: 0 160px
+  li 
+    padding: 10px 5px
     float: left
-    margin:
-      right: 1.5em
-      bottom: 1.5em
+    +link
+    +ease-in-out
+    a 
+      padding: 3px
 
-ol#archive
-  +reset-list
-
-  li
-    +clearfix
-    margin-bottom: 0.3125em
-
-    time
-      float: left
-      display: block
-      width: 6em
-
-    p
-      +reset
-      float: right
-      width: 37em
-
-div#paginator
-  position: relative
+img 
+  padding: 5px
+  background: #fff
+  border: 1px solid #F4F2F0
+  box-shadow: 1px 1px 2px #dadada
+  -webkit-box-shadow: 1px 1px 2px #dadada
+.post
   +link
-  +clearfix
+  .top
+    position: relative
+    height: 74px
+    background:
+      image: url('/images/post-top-bg.png')
+      repeat: no-repeat
+      posotion: 0 0
+      
+    time
+      color: $text1
+      font-size: 12px
+      position: absolute
+      right: 100px
+      top: 50px
+    h2 
+      position: absolute
+      left: 100px
+      top: 23px
+      color: darken($text1,10%)
+      +link
+  .bottom
+    height: 82px
+    background:
+      image: url('/images/post-bottom-bg.png')
+      repeat: no-repeat
+      posotion: 0 0
+  .content
+    +format
+    font-size: 14px 
+    text-shadow: #fff 0 1px 0
+    padding: 16px 40px 40px
+    background: 
+      image: url('/images/post-content-bg.png')
+      repeat: repeat-y
+      position: 0 0
+    border-raidus: 5px
+    
+    pre
+      background: #222
+      color: #fff
+      text-shadow: none
+      width: 579px
+      border-radius: 5px
+      margin-left: -40px
+      padding: 20px
+      code
+        border: none
+    code
+      background: #222
+      color: #fff
+      text-shadow: none
+      font-size: 12px
+      line-height: 1.25
+      +monospace
+      padding: 3px
+      border: 1px solid #111
+      border-radius: 5px
 
+#footer
+  .content
+    +clearfix
+    padding: 20px 40px 20px
+#qrcode
+  display: block
+  margin-left: 50px
+  float: left
+  width: 100px
+  img
+    width: 100px
+#web_links
+  display: block
+  margin-right: 30px
+  float: right
+  width: 340px
+  text-align: left
+  font-size: 14px
+  color: $text1
+  line-height: 1.5
   a
-    position: absolute
-    top: 0
-
-    &#left
-      left: 0
-
-    &#right
-      right: 0
-
-  fieldset
-    +reset
-    display: inline
-    width: 100%
-    text-align: center
-div#dsq-pagination
-    display: none;
+    padding: 2px
+    margin: 0 3px
+    background: #B9D8E6
+    color: #F2A2A2
+    text-decoration: none
+    border-radius: 4px
+#copyright
+  font-size: 12px
+  color: #cfcfcf
+  +monospace
