--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,14 @@
-<hr>
-<footer>
-  <p>
+<div id="footer">
+  <div class="top"></div>
+  <div class="content">
+    <a id ="qrcode" href="http://lenage.com"><img id="left" src="{{ base.url }}/images/qrcode.png" alt="lenage" /></a>
+    <p id="web_links">
       Linux用户，使用archlinux+openbox并乐在其中,现在正在努力的学习ruby<a href="http://www.douban.com/photos/album/46596354/">截图</a>.
       <a href="http://twitter.com/heyuan/">Twitter</a>, 
       <a href="http://douban.com/people/lendage">豆瓣</a>
-      <a href="http://last.fm/user/lendage/">Last.fm</a>,<a href="http://github.com/lenage">GitHub</a>&nbsp;<br />
-      订阅<a href="http://feeds2.feedburner.com/lenage">Atom feed</a>.
-  </p>
-</footer>
+      <a href="http://last.fm/user/lendage/">Last.fm</a>,<a href="http://github.com/lenage">GitHub</a>&nbsp;
+      订阅<a href="http://feeds2.feedburner.com/lenage">Atom feed</a>.<br /><span id="copyright"> © 2011 lenage. All Rights Reserved.</span>
+    </p>
+  </div>
+  <div class="bottom"></div>
+</div>
