--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,7 +1,251 @@
-html{margin:0;padding:0;border:none;background:#222;color:#fff;font-family:"Microsoft Yahei","Helvetica Neue",Helvetica,Arial,sans-serif;}body{margin:0;padding:0;border:none;position:relative;width:44em;max-width:90%;margin:2em auto;font-size:1.1em}h1{margin:0;padding:0;border:none;min-height:202px;background-image:url(/images/lime.png);background-position:right top;background-repeat:no-repeat;font-size:5.5em;font-weight:normal}h1:hover{background-position:right bottom}h1 a{color:#fff;text-decoration:none}h1 a:hover{color:#ebffb4}h1 a:hover span:after{color:#ebffb4}h1 a span{font-size:0.01em;color:#222}h1 a span:after{content:"dot";position:relative;bottom:0.5em;padding-left:0.25em;padding-right:0.5em;font-size:25em;color:#fff}nav > ul{margin:0;padding:0;border:none;list-style-type:none;position:absolute;top:8.75em;left:0}nav > ul:after{content:".";display:block;height:0;clear:both;visibility:hidden}nav > ul li{display:block;float:left}nav > ul li a{margin:0;padding:0;border:none;-webkit-transition:all 350ms ease-in-out;-moz-transition:all 350ms ease-in-out;-o-transition:all 350ms ease-in-out;transition:all 350ms ease-in-out;padding:0.75em;background:#111;font-size:1.5em;letter-spacing:0.1em;text-transform:uppercase;text-decoration:none;color:#fff}nav > ul li a:hover,nav > ul li a:active{background:#ebffb4;color:#222}nav > ul li:first-child:before,nav > ul li:last-child:after{content:"";padding-top:0.75em;padding-bottom:0.75em;background:#111;font-size:1.5em}nav > ul li:first-child:before{padding-left:1em}nav > ul li:last-child:after{padding-right:1em}footer > p{font-family:"Helvetica Neue","Helvetica",sans-serif;color:#b3b3b3}footer > p a{color:#fff;border-color:#fff}footer > p a:hover{background:#fff}article time{display:block;margin-top:2.5em;margin-bottom:0.25em;font-weight:bold;text-transform:uppercase;color:#b3b3b3;font-family:"Helvetica Neue","Helvetica",sans-serif}article h2{margin-top:0}h2,h3{color:#c6e567;font-family:"Helvetica Neue","Helvetica",sans-serif}h2 a,h3 a{border-bottom:1px solid #ebffb4;color:#ebffb4;text-decoration:none}h2 a:hover,h2 a:focus,h3 a:hover,h3 a:focus{-webkit-transition:all 350ms ease-in-out;-moz-transition:all 350ms ease-in-out;-o-transition:all 350ms ease-in-out;transition:all 350ms ease-in-out;border-bottom-color:#111;color:#111;background:#ebffb4}h2 a,h3 a{color:#c6e567;border-bottom-color:#222}h2{font-size:2em}h3{font-size:1.5em}h3 span{display:block;font-weight:normal;font-size:0.7em;color:#b3b3b3}h4{font-family:"Helvetica Neue","Helvetica",sans-serif}h4 + p{padding:1em;background:#111}img{display:block;margin:0 auto}p{line-height:1.8em;margin-bottom:1.25em}p a{border-bottom:1px solid #ebffb4;color:#ebffb4;text-decoration:none}p a:hover,p a:focus{-webkit-transition:all 350ms ease-in-out;-moz-transition:all 350ms ease-in-out;-o-transition:all 350ms ease-in-out;transition:all 350ms ease-in-out;border-bottom-color:#111;color:#111;background:#ebffb4}ol,ul{line-height:1.8em}ol a,ul a{border-bottom:1px solid #ebffb4;color:#ebffb4;text-decoration:none}ol a:hover,ol a:focus,ul a:hover,ul a:focus{-webkit-transition:all 350ms ease-in-out;-moz-transition:all 350ms ease-in-out;-o-transition:all 350ms ease-in-out;transition:all 350ms ease-in-out;border-bottom-color:#111;color:#111;background:#ebffb4}ol li,ul li{margin-bottom:0.625em}ol li:last-child,ul li:last-child{margin-bottom:0}hr{margin:1.5em 0;border-top-color:#111;border-top-style:solid;border-top-width:1px;border-bottom-color:#444;border-bottom-style:solid;border-bottom-width:1px;border-left:none;border-right:none}table{width:100%;border-collapse:collapse}table thead tr th{text-align:left;border-bottom:1px solid #fff;font-family:"Helvetica Neue","Helvetica",sans-serif}table th,table td{padding:0.25em 0.5em}blockquote{padding-left:1em;border-left:1px solid #b3b3b3;color:#b3b3b3;font-style:italic;font-family:"Helvetica Neue","Helvetica",sans-serif}code{font-family:monospace}pre{padding:1em;overflow:auto;background:#111}img#left{float:left;margin-right:1.5em;margin-bottom:1em}ul#images{margin:0;padding:0;border:none;list-style-type:none;padding-top:0.5em}ul#images:after{content:".";display:block;height:0;clear:both;visibility:hidden}ul#images li{float:left;margin-right:1.5em;margin-bottom:1.5em}ol#archive{margin:0;padding:0;border:none;list-style-type:none}ol#archive li{margin-bottom:0.313em}ol#archive li:after{content:".";display:block;height:0;clear:both;visibility:hidden}ol#archive li time{float:left;display:block;width:6em}ol#archive li p{margin:0;padding:0;border:none;float:right;width:37em}div#paginator{position:relative}div#paginator a{border-bottom:1px solid #ebffb4;color:#ebffb4;text-decoration:none}div#paginator a:hover,div#paginator a:focus{-webkit-transition:all 350ms ease-in-out;-moz-transition:all 350ms ease-in-out;-o-transition:all 350ms ease-in-out;transition:all 350ms ease-in-out;border-bottom-color:#111;color:#111;background:#ebffb4}div#paginator:after{content:".";display:block;height:0;clear:both;visibility:hidden}div#paginator a{position:absolute;top:0}div#paginator a#left{left:0}div#paginator a#right{right:0}div#paginator fieldset{margin:0;padding:0;border:none;display:inline;width:100%;text-align:center}
-#dsq-pagination {
-    display: none;
-}
-.blog div {display: none;}
-.blog_hover{position:relative}
-.blog_hover div {position: absolute;}
+@charset "UTF-8";
+html {
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: #162e41;
+  background-image: url(/images/bg.png);
+  background-position: 0 0;
+  background-repeat: repeat;
+  color: #111111;
+  font-family: "Microsoft Yahei", "Helvetica Neue", Helvetica, Arial, sans-serif; }
+
+::selection {
+  background: #476871;
+  color: white;
+  text-shadow: none; }
+
+body {
+  margin: 0;
+  padding: 0;
+  border: none; }
+
+#wrap {
+  width: 619px;
+  margin: 5px auto;
+  padding: 20px;
+  border-radius: 8px;
+  -webkit-border-raidus: 8px;
+  -moz-border-raidus: 8px; }
+  #wrap .glow {
+    width: 100%;
+    height: 754px;
+    position: absolute;
+    top: 0;
+    left: -100px;
+    z-index: -1;
+    background-image: url(/images/about-glow.png);
+    background-repeat: no-repeat;
+    background-position: center center; }
+
+#header, #footer {
+  width: 619px;
+  padding: 50px 0 140px;
+  margin: 0 auto; }
+  #header .content, #footer .content {
+    padding: 30px 59px 40px;
+    text-align: center;
+    background-image: url(/images/about-content-bg.png);
+    background-repeat: repeat-y;
+    background-position: left top; }
+    #header .content div, #footer .content div {
+      font-size: 12px; }
+      #header .content div a a, #footer .content div a a {
+        color: #999999;
+        text-decoration: none; }
+        #header .content div a a:hover, #header .content div a a:focus, #footer .content div a a:hover, #footer .content div a a:focus {
+          -webkit-transition: all 350ms ease-in-out;
+          -moz-transition: all 350ms ease-in-out;
+          -o-transition: all 350ms ease-in-out;
+          transition: all 350ms ease-in-out;
+          border-bottom: 1px solid #111111;
+          background: #111111;
+          color: #efefef; }
+  #header .top, #footer .top {
+    height: 14px;
+    overflow: hidden;
+    background-image: url(/images/about-top-bg.png);
+    background-repeat: no-repeat;
+    background-position: left top; }
+  #header .bottom, #footer .bottom {
+    height: 21px;
+    background-image: url(/images/about-bottom-bg.png);
+    background-repeat: no-repeat;
+    background-position: top left; }
+
+h1 {
+  font-size: 2em;
+  text-transform: uppercase;
+  text-shadow: #111111 1px 1px 0px, #234967 2px 2px 0px, #234967 3px 3px 0px, #234967 4px 4px 0px, #234967 5px 5px 0px, #234967 6px 6px 0px, #234967 7px 7px 0px;
+  font-family: "Microsoft Yahei", "Helvetica Neue", Helvetica, Arial, sans-serif; }
+  h1 a {
+    color: #e3d7bf;
+    text-decoration: none; }
+    h1 a:hover {
+      color: #162e41; }
+      h1 a:hover span:after {
+        color: black; }
+    h1 a span {
+      font-size: 0.01em;
+      color: #999999; }
+      h1 a span:after {
+        content: "★";
+        position: relative;
+        bottom: 0.1em;
+        padding-left: 0.2em;
+        padding-right: 0.3em;
+        font-size: 80em;
+        color: #162e41; }
+
+#nav {
+  margin: 0;
+  padding: 0;
+  border: none;
+  list-style-type: none;
+  padding: 0 160px; }
+  #nav:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden; }
+  #nav li {
+    padding: 10px 5px;
+    float: left;
+    -webkit-transition: all 350ms ease-in-out;
+    -moz-transition: all 350ms ease-in-out;
+    -o-transition: all 350ms ease-in-out;
+    transition: all 350ms ease-in-out; }
+    #nav li a {
+      color: #999999;
+      text-decoration: none; }
+      #nav li a:hover, #nav li a:focus {
+        -webkit-transition: all 350ms ease-in-out;
+        -moz-transition: all 350ms ease-in-out;
+        -o-transition: all 350ms ease-in-out;
+        transition: all 350ms ease-in-out;
+        border-bottom: 1px solid #111111;
+        background: #111111;
+        color: #efefef; }
+    #nav li a {
+      padding: 3px; }
+
+img {
+  padding: 5px;
+  background: white;
+  border: 1px solid #f4f2f0;
+  box-shadow: 1px 1px 2px #dadada;
+  -webkit-box-shadow: 1px 1px 2px #dadada; }
+
+.post a {
+  color: #999999;
+  text-decoration: none; }
+  .post a:hover, .post a:focus {
+    -webkit-transition: all 350ms ease-in-out;
+    -moz-transition: all 350ms ease-in-out;
+    -o-transition: all 350ms ease-in-out;
+    transition: all 350ms ease-in-out;
+    border-bottom: 1px solid #111111;
+    background: #111111;
+    color: #efefef; }
+.post .top {
+  position: relative;
+  height: 74px;
+  background-image: url("/images/post-top-bg.png");
+  background-repeat: no-repeat;
+  background-posotion: 0 0; }
+  .post .top time {
+    color: #999999;
+    font-size: 12px;
+    position: absolute;
+    right: 100px;
+    top: 50px; }
+  .post .top h2 {
+    position: absolute;
+    left: 100px;
+    top: 23px;
+    color: gray; }
+    .post .top h2 a {
+      color: #999999;
+      text-decoration: none; }
+      .post .top h2 a:hover, .post .top h2 a:focus {
+        -webkit-transition: all 350ms ease-in-out;
+        -moz-transition: all 350ms ease-in-out;
+        -o-transition: all 350ms ease-in-out;
+        transition: all 350ms ease-in-out;
+        border-bottom: 1px solid #111111;
+        background: #111111;
+        color: #efefef; }
+.post .bottom {
+  height: 82px;
+  background-image: url("/images/post-bottom-bg.png");
+  background-repeat: no-repeat;
+  background-posotion: 0 0; }
+.post .content {
+  line-height: 2;
+  font-size: 14px;
+  text-shadow: white 0 1px 0;
+  padding: 16px 40px 40px;
+  background-image: url("/images/post-content-bg.png");
+  background-repeat: repeat-y;
+  background-position: 0 0;
+  border-raidus: 5px; }
+  .post .content pre {
+    background: #222222;
+    color: white;
+    text-shadow: none;
+    width: 579px;
+    border-radius: 5px;
+    margin-left: -40px;
+    padding: 20px; }
+    .post .content pre code {
+      border: none; }
+  .post .content code {
+    background: #222222;
+    color: white;
+    text-shadow: none;
+    font-size: 12px;
+    line-height: 1.25;
+    font-family: "Monaco", "Courier New", monospace;
+    padding: 3px;
+    border: 1px solid #111111;
+    border-radius: 5px; }
+
+#footer .content {
+  padding: 20px 40px 20px; }
+  #footer .content:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden; }
+
+#qrcode {
+  display: block;
+  margin-left: 50px;
+  float: left;
+  width: 100px; }
+  #qrcode img {
+    width: 100px; }
+
+#web_links {
+  display: block;
+  margin-right: 30px;
+  float: right;
+  width: 340px;
+  text-align: left;
+  font-size: 14px;
+  color: #999999;
+  line-height: 1.5; }
+  #web_links a {
+    padding: 2px;
+    margin: 0 3px;
+    background: #b9d8e6;
+    color: #f2a2a2;
+    text-decoration: none;
+    border-radius: 4px; }
+
+#copyright {
+  font-size: 12px;
+  color: #cfcfcf;
+  font-family: "Monaco", "Courier New", monospace; }
