--- a/stylesheets/default.sass
+++ b/stylesheets/default.sass
@@ -14,6 +14,8 @@ $text2: darken($text1, 30%)
   margin: 0
   padding: 0
   border: none
+  fieldset,img
+    border: none
   
 = reset-list
   +reset
