fix li> pre margin bug

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -206,6 +206,8 @@ img {
     padding: 20px; }
     .post .content pre code {
       border: none; }
+  .post .content li pre {
+    margin-left: -80px; }
   .post .content code {
     background: #222222;
     color: white;
