--- a/stylesheets/default.sass
+++ b/stylesheets/default.sass
@@ -216,6 +216,8 @@ img
       padding: 20px
       code
         border: none
+    li pre
+      margin-left: -80px
     code
       background: #222
       color: #fff
