--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -257,3 +257,8 @@ img {
   font-size: 12px;
   color: #cfcfcf;
   font-family: "Monaco", "Courier New", monospace; }
+
+#dsq-pagination {
+  text-decoration: none;
+  font-size: 12px;
+  color: #b3b3b3; }
