--- a/stylesheets/default.sass
+++ b/stylesheets/default.sass
@@ -260,3 +260,7 @@ img
   font-size: 12px
   color: #cfcfcf
   +monospace
+#dsq-pagination
+  text-decoration: none
+  font-size: 12px
+  color: lighten($text1,10%)
