add new post and link picture from google

--- a/stylesheets/default.sass
+++ b/stylesheets/default.sass
@@ -165,6 +165,7 @@ img
   padding: 5px
   background: #fff
   border: 1px solid #F4F2F0
+  max-width: 520px
   box-shadow: 1px 1px 2px #dadada
   -webkit-box-shadow: 1px 1px 2px #dadada
 .post
