--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -140,6 +140,7 @@ img {
   padding: 5px;
   background: white;
   border: 1px solid #f4f2f0;
+  max-width: 520px;
   box-shadow: 1px 1px 2px #dadada;
   -webkit-box-shadow: 1px 1px 2px #dadada; }
 
