--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="wrap">
-      <div class="gowl"></div>
+      <div class="glow"></div>
       <div id="header">
         <div class="top"></div>
         <div class="content">
