--- a/stylesheets/default.sass
+++ b/stylesheets/default.sass
@@ -168,6 +168,8 @@ img
   max-width: 520px
   box-shadow: 1px 1px 2px #dadada
   -webkit-box-shadow: 1px 1px 2px #dadada
+  float: left
+  margin: 10px
 .post
   +link
   .top
