--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -143,8 +143,7 @@ img {
   max-width: 520px;
   box-shadow: 1px 1px 2px #dadada;
   -webkit-box-shadow: 1px 1px 2px #dadada;
-  float: left;
-  margin: 10px; }
+ }
 
 .post a {
   color: #999999;
