add github octocat on the left

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,10 @@
       <div class="bottom"></div>
       </div>
     {{ content }}
-    </div>
+  </div>
+  <!--Add you link here-->
+  <div id="addon">
+    <a href="http://github.com/lenage" id="github"><img src="/images/parallax_octocat.png" alt="Find me on Github"/></a>
+  </div>
   </body>
 </html>
