--- a/stylesheets/default.sass
+++ b/stylesheets/default.sass
@@ -73,6 +73,8 @@ html
   text-shadow: none
 body
   +reset
+  overflow-y: scroll
+  overflow-x: hidden
 #wrap
   width: 619px 
   margin: 5px auto
@@ -261,6 +263,40 @@ img
   font-size: 12px
   color: #cfcfcf
   +monospace
+
+//addon style
+#addon
+  position: fixed 
+  left: -20px 
+  top: 6em
+  
+#github
+  display: block
+  background: none
+  
+  img
+    background: none
+    border: none
+    padding: 0
+    box-shadow: none 
+    -webkit-box-shadow: none 
+    width: 80px
+    cursor: pointer
+
+    -webkit-transform: rotate(45deg)
+    -moz-transform: rotate(45deg)
+    -o-transform: rotate(45deg)
+    transform: rotate(45deg)
+    -webkit-transition: -webkit-transform 1s ease-in
+    -moz-transition: -moz-transform 1s ease-in
+    -o-transition: -o-transform 1s ease-in
+    transition: transform 1s ease-in
+
+    &:hover
+      -webkit-transform: rotate(90deg)
+      -moz-transform: rotate(90deg)
+      -o-transform: rotate(90deg)
+      transform: rotate(90deg)
 #dsq-pagination
   text-decoration: none
   font-size: 12px
