--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -20,7 +20,9 @@ html {
 body {
   margin: 0;
   padding: 0;
-  border: none; }
+  border: none;
+  overflow-y: scroll;
+  overflow-x: hidden; }
   body fieldset, body img {
     border: none; }
 
@@ -142,9 +144,7 @@ img {
   border: 1px solid #f4f2f0;
   max-width: 520px;
   box-shadow: 1px 1px 2px #dadada;
-  -webkit-box-shadow: 1px 1px 2px #dadada;
-  float: left;
-  margin: 10px; }
+  -webkit-box-shadow: 1px 1px 2px #dadada; }
 
 .post a {
   color: #999999;
@@ -260,6 +260,36 @@ img {
   font-size: 12px;
   color: #cfcfcf;
   font-family: "Monaco", "Courier New", monospace; }
+
+#addon {
+  position: fixed;
+  left: -20px;
+  top: 6em; }
+
+#github {
+  display: block;
+  background: none; }
+  #github img {
+    background: none;
+    border: none;
+    padding: 0;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    width: 80px;
+    cursor: pointer;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+    -webkit-transition: -webkit-transform 1s ease-in;
+    -moz-transition: -moz-transform 1s ease-in;
+    -o-transition: -o-transform 1s ease-in;
+    transition: transform 1s ease-in; }
+    #github img:hover {
+      -webkit-transform: rotate(90deg);
+      -moz-transform: rotate(90deg);
+      -o-transform: rotate(90deg);
+      transform: rotate(90deg); }
 
 #dsq-pagination {
   text-decoration: none;
