--- a/stylesheets/default.sass
+++ b/stylesheets/default.sass
@@ -273,7 +273,8 @@ img
 #github
   display: block
   background: none
-  
+  width: 100px
+  height: 100px
   img
     background: none
     border: none
