--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,4 +11,8 @@
     </p>
   </div>
   <div class="bottom"></div>
+  <!-- start Mixpanel -->
+  <script type="text/javascript">var mpq=[];mpq.push(["init","1e8711cdb344603d7e4a32e4a344660f"]);(function(){var b,a,e,d,c;b=document.createElement("script");b.type="text/javascript";b.async=true;b.src=(document.location.protocol==="https:"?"https:":"http:")+"//api.mixpanel.com/site_media/js/api/mixpanel.js";a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(b,a);e=function(f){return function(){mpq.push([f].concat(Array.prototype.slice.call(arguments,0)))}};d=["init","track","track_links","track_forms","register","register_once","identify","name_tag","set_config"];for(c=0;c<d.length;c++){mpq[d[c]]=e(d[c])}})();
+  </script>
+  <!-- end Mixpanel -->
 </div>
