Update projects page and style

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
         <ul id="nav">
           <li><a href="{{ base.url }}/">Blog</a></li>
           <li><a href="{{ base.url }}/config">Config</a></li>
+          <li><a href="{{ base.url }}/projects">Projects</a></li>
           <li><a href="{{ base.url }}/about/">About</a></li>
         </ul>
       </div>
