--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -134,7 +134,8 @@ h1 {
         transition: all 350ms ease-in-out;
         border-bottom: 1px solid #111111;
         background: #111111;
-        color: #efefef; }
+        color: #efefef;
+        border-radius: 5px;}
     #nav li a {
       padding: 3px; }
 
