Update stylesheet css

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -23,6 +23,7 @@ body {
   border: none;
   overflow-y: scroll;
   overflow-x: hidden; }
+  -webkit-font-smoothing: antialiased;
   body fieldset, body img {
     border: none; }
 
