--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -22,8 +22,8 @@ body {
   padding: 0;
   border: none;
   overflow-y: scroll;
-  overflow-x: hidden; }
-  -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
+  -webkit-font-smoothing: antialiased;}
   body fieldset, body img {
     border: none; }
 
