--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="content">
     <a id ="qrcode" href="http://lenage.com"><img id="left" src="{{ base.url }}/images/qrcode.png" alt="lenage" /></a>
     <p id="web_links">
-      Linux用户，使用archlinux+openbox并乐在其中,现在正在努力的学习ruby<a href="http://www.douban.com/photos/album/46596354/">截图</a>.
+      Emacs用户，以前使用archlinux+openbox并乐在其中,现在正在努力的学习lisp<a href="http://www.douban.com/photos/album/46596354/">截图</a>.
       <a href="http://twitter.com/heyuan/">Twitter</a>,
       <a href="http://douban.com/people/lendage">豆瓣</a>
       <a href="http://last.fm/user/lendage/">Last.fm</a>,
