Update google verfiy

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="5BPJsPRKSw5tmNfhAk54112rDkRXu3iUpRABYJj8CCY" />
     <title>{{ page.title }}</title>
     <link href="/stylesheets/default.css" rel="stylesheet" type="text/css">
     <link href="/stylesheets/highlight.css" rel="stylesheet" type="text/css">
