abstract GA code to signal file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,5 +31,6 @@
   <div id="addon">
     <a href="http://github.com/lenage" id="github"><img src="/images/parallax_octocat.png" alt="Find me on Github"/></a>
   </div>
+  {% include ga.html %}
   </body>
 </html>
