--- a/_includes/category_page.html
+++ b/_includes/category_page.html
@@ -1,6 +1,6 @@
   {% for post in category_posts %}
     <li>
       <time datetime="{{ post.date | xmlschema }}">{{ post.date | date: "%Y-%m-%d" }}</time>
-      <p><a href="{{ post.url }}">{{ post.title }}</a></p>
+      <a href="{{ post.url }}">{{ post.title }}</a>
     </li>
     {% endfor %}
