Update logo and others

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,14 +1,14 @@
 <nav>
-  <h1>Hi.</h1>
+  <h1>Hola.</h1>
   <a href="/">
-    <img src="/logo.png" id="logo" alt="Blog logo"/>
+    <img src="/assets/images/logo.png" id="logo" alt="Blog logo"/>
   </a>
   <h2>I'm <a href="/">{{ site.theme.name }}</a>.</h2>
   <hr/>
   <ul>
-  <p>A brief bio or something witty.</p>
+  <p>I do computer things and sometimes write about it here. </p>
   <p>
-    Edit me in <code>_includes/sidebar.html</code>
+    I'm a Software Engineer from Gansu and I ship code at <a href="http://theplant.jp">ThePlant</a>.
   </p>
   <hr/>
   <div>
