Add link to location

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,7 @@
   <ul>
   <p>I do computer things and sometimes write about it here. </p>
   <p>
-    I'm a Software Engineer from Gansu and I ship code at <a href="http://theplant.jp">ThePlant</a>.
+    I'm a Software Engineer from <a href="https://goo.gl/maps/wLdB6">Gansu</a> and I ship code at <a href="http://theplant.jp">ThePlant</a>.
   </p>
   <hr/>
   <div>
