--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,12 @@
 <div class="disclaimer">
   {% if site.theme.show_disclaimer %}
   <p>
-    The postings on this site are my own and don't necessarily represent my 
+    The postings on this site are my own and don't necessarily represent my
     employer’s positions, strategies or opinions.
   </p>
   {% endif %}
 
   <p>
-    © {{ site.theme.name }}, 2013 &mdash; built with Jekyll using Lagom theme
+    © {{ site.theme.name }}, {{ site.time | date: '%Y'}} &mdash; built with Jekyll using Lagom theme
   </p>
 </div>
