Add tutorial categories

--- a/_includes/css/base.css
+++ b/_includes/css/base.css
@@ -351,3 +351,4 @@
 	.remove-bottom { margin-bottom: 0 !important; }
 	.half-bottom { margin-bottom: 10px !important; }
 	.add-bottom { margin-bottom: 20px !important; }
+    #disqus_thread { border-top: 1px solid #EAEDEE; margin-top: 30px;}
