Add a new post and adjust css

--- a/_includes/css/base.css
+++ b/_includes/css/base.css
@@ -128,6 +128,12 @@
 		max-width: 100%;
 		height: auto; }
 
+    #post img {
+        max-width: 100%;
+        height: auto;
+        padding: 0.5rem;
+        margin: 0.5rem;
+    }
 
 /* #Buttons
 ================================================== */
