--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -11,7 +11,7 @@ body {
   font-size: 16px;
   background-color: white;
   color: #222222;
-  line-height: 24px;
+  line-height: 1.5;
   margin: 0;
   border-top: 7px solid {{ site.theme.highlight_color }};
 }
