Update footer and remove resume info

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,6 @@
   {% endif %}
 
   <p>
-    © {{ site.theme.name }}, {{ site.time | date: '%Y'}} &mdash; built with Jekyll using Lagom theme
+    © Y, {{ site.time | date: '%Y'}} &mdash; built with Jekyll using Lagom theme
   </p>
 </div>
